# eagle

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  TODO.md  docker-compose.yml  prompt.md  pyproject.toml  pytest.ini  requirements-test.txt  setup.py
eagle_admin/frontend/: package-lock.json  package.json
eagle_admin/frontend/src/app/: layout.tsx  page.tsx
eagleapi/: __init__.py  config.py  tasks_usage.md
eagleapi/admin/: README.md  __init__.py  __init__.py.new  api.py  views.py
eagleapi/admin/templates/: admin.html  base.html  model_form.html  model_list.html
eagleapi/admin/templates/admin/: base.html  confirm_delete.html  form.html  index.html  list.html
eagleapi/api/: __init__.py  auth.py
eagleapi/auth/: EAGLE_AUTH_DOCS.md  __init__.py  audit.py  auth_usage.md  middleware.py  rate_limiting.py  session_management.py  social.py  social_auth_usage.md  two_factor.py
eagleapi/cache/: __init__.py  backends.py  config.py  core.py  decorator.py  decorators.py  example_usage.py  middleware.py  serializers.py  utils.py
eagleapi/cli/: __init__.py  db.py  management.py
eagleapi/cli/commands/: __init__.py  migrations.py  project.py  server.py
eagleapi/cli/utils/: __init__.py
eagleapi/core/: __init__.py  config.py  security.py
eagleapi/db/: README.md  __init__.py  base.py  config.py  example_auto_schema_usage.py  exceptions.py  migrations.py  models.py  session.py  types.py  user_model.py  utils.py
eagleapi/db/models/: __init__.py  base.py  logs.py  models.py
eagleapi/db/models/mixins/: __init__.py  crud.py  crud_v1.py
eagleapi/db/schemas/: __init__.py  base.py  generator.py
eagleapi/extensions/: __init__.py
eagleapi/middleware/: P.PY  __init__.py  auth.py  base.py  compression.py  cors.py  logging.py  rate_limit.py  timming.py
eagleapi/migrations/: __init__.py
eagleapi/schemas/: token.py  user.py
eagleapi/services/: __init__.py  auth.py
eagleapi/tasks/: background.py  model.py
eagleapi/utils/: __init__.py  datetime.py  routes.py  typescript.py  typescript_v1.py  typescriptv2.py
examples/basic_app/: .env.example  README.md  main.py  requirements.txt
tests/: __init__.py  conftest.py  test_auth_simple.py  test_database_setup.py  test_db.py  test_db_setup.py  test_eagle.py  test_simple.py
tests/api/: test_auth.py
tests/unit/: test_core.py  test_db.py
