[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eagleapi"
version = "0.1.0"
description = "A modern Python web framework built on FastAPI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "David Iyke", email = "davidiyke04@gmail.com"},
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "pydantic[email]>=1.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.5",
    "httpx>=0.19.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.6",
    "redis>=6.1.0",
    "pydantic-settings>=2.8.1",
    "bcrypt==4.0.1",
    "pytz>=2025.2",
    "pyotp>=2.9.0",
    "qrcode>=7.4.2",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.15.0",
    "pytest-cov>=2.0.0",
    "black>=21.0",
    "isort>=5.0.0",
    "mypy>=0.910",
]

[project.scripts]
eagle = "eagleapi.cli:app"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=eagle --cov-report=term-missing"
